. first early pass at adding the base for includes, filters, and opvalues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.0.2"
+version = "0.0.3-SNAPSHOT.1"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -18,3 +18,7 @@ repository = "https://github.com/modql/rust-modql"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+
+[devDependencies]
+
