--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ members = [".", "modql-macros"]
 
 [dependencies]
 thiserror = "1"
-modql-macros = { version="0.0.3", path = "modql-macros" }
+modql-macros = { version="0.0.4-SNAPSHOT", path = "modql-macros" }
 serde_json = "1.0"
 
 
