--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ members = [".", "modql-macros"]
 thiserror = "1"
 modql-macros = { version="0.0.4-SNAPSHOT", path = "modql-macros" }
 serde_json = "1.0"
+serde = { version = "1", features = ["derive"] }
 
 
 [dev-dependencies]
