--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ members = [".", "modql-macros"]
 
 [dependencies]
 thiserror = "1"
-modql-macros = { version="0.0.5", path = "modql-macros" }
-serde_json = "1.0"
+modql-macros = { version="0.0.6-SNAPSHOT", path = "modql-macros" }
+serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 
 
