--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.0.6-SNAPSHOT"
+version = "0.1.0"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -21,7 +21,7 @@ members = [".", "modql-macros"]
 
 
 [dependencies]
-modql-macros = { version="0.0.6-SNAPSHOT", path = "modql-macros" }
+modql-macros = { version="0.1.0", path = "modql-macros" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
