--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.1.0"
+version = "0.1.1-SNAPSHOT"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -12,8 +12,8 @@ keywords = [
 	"data-model",
 	"graphql"
 ]
-homepage = "https://github.com/modql/rust-modql"
-repository = "https://github.com/modql/rust-modql"
+homepage = "https://github.com/jeremychone/rust-modql"
+repository = "https://github.com/jeremychone/rust-modql"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [workspace]
