--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.2.0"
+version = "0.2.1-WIP"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -23,6 +23,8 @@ members = [".", "modql-macros"]
 modql-macros = { version="0.1.0", path = "modql-macros" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+time = "0.3.20"
+uuid = "1.3.1"
 
 
 [dev-dependencies]
