--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.2.1-WIP"
+version = "0.3.0-WIP"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -19,13 +19,18 @@ repository = "https://github.com/jeremychone/rust-modql"
 [workspace]
 members = [".", "modql-macros"]
 
+[features]
+default = []
+with-sea-query = ["sea-query"]
+
+
 [dependencies]
-modql-macros = { version="0.1.0", path = "modql-macros" }
+modql-macros = { version="0.3.0-WIP", path = "modql-macros", features=["with-sea-query"]}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 time = "0.3.20"
 uuid = "1.3.1"
-
+sea-query = { version = "0.30", optional = true }
 
 [dev-dependencies]
 anyhow = "1"
