--- a/modql-macros/Cargo.toml
+++ b/modql-macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql-macros"
-version = "0.3.0-alpha.3"
+version = "0.3.0-alpha.4-WIP"
 authors = ["jeremy.chone@gmail.com"]
 edition = "2021"
 description = "Macros for modql. Not intended to be used directly."
