--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.3.0-alpha.6-WIP"
+version = "0.3.0-alpha.6"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -26,7 +26,7 @@ with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
 
 
 [dependencies]
-modql-macros = { version="0.3.0-alpha.6-WIP", path = "modql-macros", optional=true}
+modql-macros = { version="0.3.0-alpha.6", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 time = "0.3.20"
