--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,13 +26,14 @@ with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
 
 
 [dependencies]
-modql-macros = { version="0.3.0", path = "modql-macros", optional=true}
+modql-macros = { version="0.3", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-time = "0.3.20"
-uuid = "1.3.1"
+time = "0.3"
+uuid = "1.3"
 sea-query = { version = "0.30", optional = true }
 
 [dev-dependencies]
 anyhow = "1"
+serde_with = "3"
 
