--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.3.5-WIP"
+version = "0.3.5"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -23,12 +23,16 @@ members = [".", "modql-macros"]
 [features]
 default = ["modql-macros"]
 with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
+with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
 
 [dependencies]
 modql-macros = { version="0.3", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+# -- For features
 sea-query = { version = "0.30", optional = true }
+rusqlite = { version = "0.30", optional = true }
 
 [dev-dependencies]
 anyhow = "1"
