--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.3.10-WIP"
+version = "0.3.10"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -26,12 +26,12 @@ unsafe_code = "forbid"
 members = [".", "modql-macros"]
 
 [features]
-default = ["modql-macros", "with-sea-query", "with-rusqlite"]
+default = ["modql-macros"]
 with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
 with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
 
 [dependencies]
-modql-macros = { version="0.3.10-WIP", path = "modql-macros", optional=true}
+modql-macros = { version="0.3.10", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
