--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.3.10"
+version = "0.3.11-rc.1"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -31,13 +31,13 @@ with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
 with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
 
 [dependencies]
-modql-macros = { version="0.3.10", path = "modql-macros", optional=true}
+modql-macros = { version="0.3.11-rc", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # -- For features
-sea-query = { version = "0.30", features = ["thread-safe"], optional = true }
-rusqlite = { version = "0.30", optional = true }
+sea-query = { version = "0.31.0-rc.4", features = ["thread-safe"], optional = true }
+rusqlite = { version = "0.31", optional = true }
 
 [dev-dependencies]
 anyhow = "1"
