--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "modql"
-version = "0.4.0-rc.3"
-authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
+version = "0.4.0-rc.4"
 edition = "2021"
+authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 license = "MIT OR Apache-2.0"
 description = "Rust implementation for Model Query Language support"
 categories = ["data-structures"]
@@ -32,7 +32,7 @@ with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
 with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
 
 [dependencies]
-modql-macros = { version="0.4.0-rc.3", path = "modql-macros", optional=true}
+modql-macros = { version="0.4.0-rc", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
