--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ members = [".", "modql-macros"]
 default = ["modql-macros"]
 with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
 with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
+with-postgres = ["sea-query/backend-postgres"]
 
 [dependencies]
 modql-macros = { version="0.4.0-rc.8", path = "modql-macros", optional=true}
