--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.4.0-rc.6"
+version = "0.4.0-rc.7"
 edition = "2021"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -22,24 +22,24 @@ unused = "allow" # For experimental dev.
 
 [lints.rust]
 unsafe_code = "forbid"
-unused = { level = "allow", priority = -1 } # For test files (dev)
+# unused = { level = "allow", priority = -1 } # For test files (dev)
 
 [workspace]
 members = [".", "modql-macros"]
 
 [features]
-default = ["modql-macros", "with-sea-query", "with-rusqlite"] # for dev
-# default = ["modql-macros"]
+# default = ["modql-macros", "with-sea-query", "with-rusqlite"] # for dev
+default = ["modql-macros"]
 with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
 with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
 
 [dependencies]
-modql-macros = { version="0.4.0-rc", path = "modql-macros", optional=true}
+modql-macros = { version="0.4.0-rc.7", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # -- For features
-sea-query = { version = "0.31.0-rc.6", features = ["thread-safe"], optional = true }
+sea-query = { version = "=0.31.0-rc.7", features = ["thread-safe"], optional = true }
 rusqlite = { version = "0.31", optional = true }
 
 [dev-dependencies]
