--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # -- For features
-sea-query = { version = "=0.31.0-rc.9", features = ["thread-safe"], optional = true }
+sea-query = { version = "0.31", features = ["thread-safe"], optional = true }
 rusqlite = { version = "0.31", optional = true }
 
 [dev-dependencies]
