--- a/modql-macros/Cargo.toml
+++ b/modql-macros/Cargo.toml
@@ -22,7 +22,7 @@ syn = {version = "2", features = ["full"]}
 proc-macro2 = "1"
 
 # -- For features
-sea-query = { version = "=0.31.0-rc.9", optional = true }
+sea-query = { version = "0.31.0", optional = true }
 rusqlite = { version = "0.31.0", optional = true }
 
 [lib]
