--- a/modql-macros/Cargo.toml
+++ b/modql-macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql-macros"
-version = "0.4.0-rc.8"
+version = "0.4.0"
 authors = ["jeremy.chone@gmail.com"]
 edition = "2021"
 description = "Macros for modql. Not intended to be used directly."
@@ -22,8 +22,8 @@ syn = {version = "2", features = ["full"]}
 proc-macro2 = "1"
 
 # -- For features
-sea-query = { version = "0.31.0", optional = true }
-rusqlite = { version = "0.31.0", optional = true }
+sea-query = { workspace = true, optional = true }
+rusqlite = { workspace = true, optional = true }
 
 [lib]
 proc-macro = true
