--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
 with-ilike = ["sea-query/backend-postgres"]
 
 [dependencies]
-modql-macros = { version="0.4", path = "modql-macros", optional=true}
+modql-macros = { version="0.5.0-alpha.1", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
