--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.5.0-alpha.1-WIP"
+version = "0.5.0-alpha.1"
 edition = "2021"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -19,7 +19,7 @@ resolver = "2"
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
-unused = { level = "allow", priority = -1 } # For exploratory dev.
+# unused = { level = "allow", priority = -1 } # For exploratory dev.
 
 [lints.rust]
 unsafe_code = "forbid"
@@ -37,7 +37,7 @@ with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
 with-ilike = ["sea-query/backend-postgres"]
 
 [dependencies]
-modql-macros = { version="0.5.0-alpha.1", path = "modql-macros", optional=true}
+modql-macros = { version="=0.5.0-alpha.1", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
