. add rusqlite serde_json feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,13 +47,13 @@ rusqlite = { workspace = true, optional = true }
 
 [workspace.dependencies]
 sea-query = { version = "=1.0.0-rc.3", features = ["thread-safe"] }
-rusqlite = { version = "0.36" }
+rusqlite = { version = "0.36", features = ["serde_json"] }
 
 [dev-dependencies]
 serde_with = "3"
 tokio = { version = "1", features = ["full"]}
 pretty-sqlite = "0.2.0"
-rusqlite = {version = "0.36", features = ["bundled"]}
+rusqlite = {version = "0.36", features = ["bundled", "serde_json"]}
 
 # NOTE: for now, the sea-query-rusqlite is inlined in modql
 # sea-query-rusqlite = {version = "0.7"}
