--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modql"
-version = "0.5.0-alpha.3-WIP"
+version = "0.5.0-alpha.3"
 edition = "2024"
 authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -30,14 +30,14 @@ members = [".", "modql-macros"]
 
 [features]
 # default = ["modql-macros", "with-sea-query", "with-rusqlite"] # for dev
-default = ["modql-macros",  "with-rusqlite"] # for dev
-# default = ["modql-macros"]
+# default = ["modql-macros",  "with-rusqlite"] # for dev
+default = ["modql-macros"]
 with-sea-query = ["sea-query", "modql-macros/with-sea-query"]
 with-rusqlite = ["rusqlite", "modql-macros/with-rusqlite"]
 with-ilike = ["sea-query/backend-postgres"]
 
 [dependencies]
-modql-macros = { version="=0.5.0-alpha.2", path = "modql-macros", optional=true}
+modql-macros = { version="=0.5.0-alpha.3", path = "modql-macros", optional=true}
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
